<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/red"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".view.auth.RegisterActivity">

    <ImageView
        android:id="@+id/logo_pemkot"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="Logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card"
        android:src="@drawable/logo"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        app:cardElevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeWidth="1dp"
        app:strokeColor="@color/red"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="-25dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="20dp"
            android:padding="28dp">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selamat_datang"
                android:textSize="22sp"
                android:textColor="@color/black"
                style="@style/TextBold"/>

            <TextView
                android:id="@+id/welcome_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRegular"
                android:text="@string/silakan_daftar" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat_email"
                style="@style/TextBold"
                android:textSize="16sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_login_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/email">

                <com.example.fecalguard.view.customview.CustomEmailValid
                    android:id="@+id/ed_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBold"
                android:textSize="16sp"
                android:text="@string/kata_sandi" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_login_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/lock">

                <com.example.fecalguard.view.customview.CustomPasswordValid
                    android:id="@+id/ed_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/daftar_akun"
                android:textAllCaps="false"
                style="@style/TextBold"
                android:textColor="@color/white"
                app:cornerRadius="8dp" />

            <TextView
                android:id="@+id/belum_punya_akun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:text="@string/sudah_punya_akun_silakan_login"
                style="@style/TextBold"
                tools:ignore="TouchTargetSizeCheck"
                android:focusable="true" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>